--- a/package.json
+++ b/package.json
@@ -9,8 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@pinata/sdk": "^2.1.0",
+    "axios": "^1.7.2",
     "flowbite": "^2.4.1",
+    "fs": "^0.0.1-security",
     "next": "14.2.4",
+    "nft.storage": "^7.2.0",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.2.1"
