--- a/package.json
+++ b/package.json
@@ -28,5 +28,11 @@
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
+  }, 
+
+  "browser": {
+    "fs": false,
+    "os": false,
+    "path": false
   }
 }
